src/tests/snapshots/learn_chumsky__tests__assert_output-4.snap
---
source: src/tests/mod.rs
expression: "format!(\"---\\n{src}\\n---\\n\\n{result:?}\")"
---
---
{ let testing = 23 + 0; }       ()
---

ParseResult(Some(Spanned(Block([Error]), 0..25)), [])
