src/tests/snapshots/learn_chumsky__tests__assert_output-5.snap
---
source: src/tests/mod.rs
expression: "format!(\"---\\n{src}\\n---\\n\\n{result:?}\")"
---
---
{ 200 + (66 - 9) * 33 }         ()
---

ParseResult(Some(Spanned(Block([]), 0..23)), [])
