src/tests/snapshots/learn_chumsky__tests__assert_output-6.snap
---
source: src/tests/mod.rs
expression: "format!(\"---\\n{src}\\n---\\n\\n{result:?}\")"
---
---
{
	fn(a, b) {
		get_fn[](arg0, { 0 });
		{ inside }(arg1)(arg2);
	}
}
---

ParseResult(Some(Spanned(Block([Error]), 0..69)), [])
