src/tests/snapshots/learn_chumsky__tests__assert_output-7.snap
---
source: src/tests/mod.rs
expression: "format!(\"---\\n{src}\\n---\\n\\n{result:?}\")"
---
---
{{]}
---

ParseResult(Some(Spanned(Block([Error]), 0..4)), [])
