src/tests/snapshots/learn_chumsky__tests__assert_output-8.snap
---
source: src/tests/mod.rs
expression: "format!(\"---\\n{src}\\n---\\n\\n{result:?}\")"
---
---
{ (test; }                      ()
---

ParseResult(Some(Spanned(Block([Error]), 0..10)), [])
